feat: implement rate limiting filter and auth controller endpoints for user management and password recovery